<resources>
    <string name="app_name">MonsterHunterFinder</string>
    <string name="botonPerfil">MI PERFIL</string>
    <string name="botonBuscar">BUSCAR</string>
    <string name="botonMensajes">MENSAJES</string>
    <string name="textoTitulo">MONSTER HUNTER FINDER</string>
    <string name="botonVolver">VOLVER</string>
    <string name="userName">Nombre de usuario</string>
    <string name="botonBuscarPalabras">BUSCAR POR PALABRAS</string>
    <string name="botonBuscarZona">BUSCAR POR ZONA</string>
    <string name="textoBuscar">¡Introduce lo que buscas!</string>
    <string name="palabrasBuscadas">Palabras buscadas</string>
    <string name="más">Más...</string>
    <string name="compartirApp">¡Enseña la app a tus amigos!</string>
    <string name="acercaDe">Acerca de...</string>
    <string name="buscarKiranico">Buscar en Kiranico</string>
    <string name="diarioCaza">DIARIO DE CAZA</string>
    <string name="numEntrada">Nº de entrada</string>
    <string name="arma">Arma utilizada</string>
    <string name="resumenCaza">Resumen de la caza</string>
    <string name="vaciarFiltro">VACIAR FILTRO</string>
    <string name="vaciarFiltroPregunta">¿Quieres vaciar el filtro?</string>
    <string name="vaciarFiltroSi">¡Seguro!</string>
    <string name="vaciarFiltroNo">Mejor no.</string>
    <string name="cuidado">¡Cuidado!</string>
    <string name="granEspada">Gran espada</string>
    <string name="espadaLarga">Espada larga</string>
    <string name="espadaYEscudo">Espada y escudo</string>
    <string name="espadasDobles">Espadas dobles</string>
    <string name="lanza">Lanza</string>
    <string name="lanzaPistola">Lanza pistola</string>
    <string name="martillo">Martillo</string>
    <string name="cornamusa">Cornamusa</string>
    <string name="hachaEspada">Hacha espada</string>
    <string name="hachaCargada">Hacha cargada</string>
    <string name="glaiveInsecto">Glaive insecto</string>
    <string name="ballestaLigera">Ballesta ligera</string>
    <string name="ballestaPesada">Ballesta pesada</string>
    <string name="arco">Arco</string>
    <string name="filtrarArma">FILTRAR POR ARMA</string>
    <string name="añadir">+</string>
    <string name="tituloEntrada">Título de la entrada</string>
    <string name="guardarEntrada">GUARDAR ENTRADA</string>
    <string name="borrar">BORRAR</string>
    <string name="modificar">"MODIFICAR "</string>
    <string name="ver">>></string>
    <string name="bio">Biografía</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="confirmarPregunta">¿Quieres confirmar los cambios?</string>
    <string name="eliminar">X</string>
    <string name="editar">Ed</string>
    <string name="seguroBorrado">¿Estás seguro de borrar esta entrada?</string>
    <string name="enlaceFoto">¡Haz una foto o selecciónala de tu galería!</string>
    <string name="hintBuscar">¡Pulsa largo para buscar por favoritos!</string>
    <string name="asunto">¡Nueva app de Monster Hunter!</string>
    <string name="contenido">¿Aburrido de cazar en solitario? ¡Descarga ya Monster Hunter Finder!</string>
    <string name="prererencias">Preferencias</string>
    <string name="armaFavorita">¡Elige tu arma favorita!</string>
    <string name="juegoFavorito">¿Juego favorito de la saga?</string>
    <string name="frecuenciaJuego">¿Qué tan seguido juegas?</string>
    <string name="armaFavoritaSi">Arma favorita</string>
    <string name="juegoFavoritoSi">Juego favorito</string>
    <string name="frecuenciaJuegoSi">Frecuencia de juego</string>
    <string name="buscarArma">Buscar por arma favorita</string>
    <string name="buscarJuego">Buscar por juego favorito</string>
    <string name="buscarDias">Buscar por frecuencia de juego</string>
    <string name="diarioCazaNotificaciones">Diario de caza</string>
    <string name="entradaAnadidaNotif">¡Se ha añadido una nueva entrada al diario de caza!</string>
    <string name="entradaModificadaNotif">¡Se ha modificado una entrada del diario de caza!</string>
    <string name="darPermisos">¡Dame permisos si quieres recibir notificaciones!</string>
    <string name="contacto">¡Contáctame aquí si lo necesitas! jaimealba@outlook.es</string>
    <string name="todas">Todas las armas</string>
    <string name="diario">Diario</string>
    <string name="findes">Findes</string>
    <string name="entreSemana">Entre semana</string>
    <string name="textoGaleria">¡Lúcete ante el resto de jugadores!</string>
    <string name="videoAnadir">¡Y graba un vídeo o selecciónalo de tu galería!</string>
    <string name="mapa">MAPA</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="placeholder">Placeholder</string>
    <string name="punto">Punto de interés</string>
    <string name="reunion">Reunión de juego</string>
    <string name="escribe">¡Debes escribir algo en el título y la descripción!</string>
</resources>