<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/armaFavorita">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/armaFavoritaSi"
            app:entries="@array/reply_entries_armas"
            app:entryValues="@array/reply_values_armas"
            app:key="arma"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/juegoFavorito">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/juegoFavoritoSi"
            app:entries="@array/reply_entries_juegos"
            app:entryValues="@array/reply_values_juegos"
            app:key="juegofav"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/frecuenciaJuego">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/frecuenciaJuegoSi"
            app:entries="@array/reply_entries_dias"
            app:entryValues="@array/reply_values_dias"
            app:key="dias"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>