<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/Desplegable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/más"
        app:showAsAction="never">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:id="@+id/CompartirApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/compartirApp" />
            <item
                android:id="@+id/AcercaDe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/acercaDe" />

        </menu>
    </item>

    <item
        android:id="@+id/Web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/buscarKiranico"
        app:showAsAction="always|collapseActionView|withText" />
</menu>