<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    tools:context=".activity_diario_ver">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/botonVolverDiarioVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/system_neutral1_900"
        android:onClick="volver"
        android:text="@string/botonVolver"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaNumEntradaVer"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/numEntrada"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:boxStrokeColor="@android:color/holo_orange_dark"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:hintTextColor="@color/material_dynamic_neutral60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoNumEntradaVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral70" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaTituloEntradaVer"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:hint="@string/tituloEntrada"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:boxStrokeColor="@android:color/holo_orange_dark"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@+id/cajaNumEntradaVer"
        app:layout_constraintStart_toStartOf="@+id/cajaNumEntradaVer"
        app:layout_constraintTop_toBottomOf="@+id/cajaNumEntradaVer"
        tools:hintTextColor="@color/material_dynamic_neutral60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoTituloEntradaVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral70" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaArmaUtilizadaVer"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:hint="@string/arma"
        android:inputType="textMultiLine"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:boxStrokeColor="@android:color/holo_orange_dark"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@+id/cajaTituloEntradaVer"
        app:layout_constraintStart_toStartOf="@+id/cajaTituloEntradaVer"
        app:layout_constraintTop_toBottomOf="@+id/cajaTituloEntradaVer"
        tools:hintTextColor="@color/material_dynamic_neutral60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoArmaUtilizadaVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral70" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaResumenCazaVer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/resumenCaza"
        android:inputType="textMultiLine"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:boxStrokeColor="@android:color/holo_orange_dark"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/botonVolverDiarioVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cajaArmaUtilizadaVer"
        app:layout_constraintTop_toBottomOf="@+id/cajaArmaUtilizadaVer"
        tools:hintTextColor="@color/material_dynamic_neutral60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoResumenCazaVer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/material_dynamic_neutral70" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/system_neutral1_900"
        android:text="@string/modificar"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botonBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@android:color/system_neutral1_900"
        android:text="@string/borrar"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cajaNumEntradaVer" />


</androidx.constraintlayout.widget.ConstraintLayout>