<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_perfil_anadir"
    android:background="@color/material_dynamic_neutral20">

    <ImageView
        android:id="@+id/headerPerfilAnadir"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header2" />

    <ImageView
        android:id="@+id/iconPerfilAnadir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerPerfilAnadir"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon3" />

    <Button
        android:id="@+id/botonVolverAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/system_neutral1_900"
        android:onClick="volver"
        android:text="@string/botonVolver"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:onClick="volver" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaEnlaceFoto"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/enlaceFoto"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:boxStrokeColor="@android:color/holo_orange_dark"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerPerfilAnadir"
        app:layout_constraintVertical_bias="0.13"
        tools:hintTextColor="@color/material_dynamic_neutral60">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textoEnlaceFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral70" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonConfirmarAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@android:color/system_neutral1_900"
        android:text="@string/confirmar"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>